--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shillette</title>
-    <link id="favicon" rel="icon" href="images/icon.png" type="image/png"> {/* Add ID for easy selection */}
+    <link id="favicon" rel="icon" href="images/icon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -199,7 +199,7 @@
     </div>
 
     <div id="product-edit-modal" class="modal">
-        <div class="modal-content max-w-lg"> {/* Adjusted max-width */}
+        <div class="modal-content max-w-lg">
             <button id="product-modal-close-button" class="modal-close-button">
                  <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
             </button>
@@ -238,7 +238,7 @@
                             <option value="custom">Custom HEX</option>
                          </select>
                      </div>
-                     <div id="custom-hex-input-container" class="hidden"> {/* Container for conditional visibility */}
+                     <div id="custom-hex-input-container" class="hidden">
                          <label for="product-edit-customHex">Custom HEX Color</label>
                          <input type="text" id="product-edit-customHex" placeholder="#RRGGBB">
                      </div>
@@ -275,7 +275,7 @@
     <header class="py-4 sticky top-0 z-40 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                <img id="header-site-icon" src="images/icon.png" alt="Site Icon" class="w-8 h-8" onerror="this.src='https://placehold.co/32x32/333/ccc?text=ICON'"> {/* Added ID */}
+                <img id="header-site-icon" src="images/icon.png" alt="Site Icon" class="w-8 h-8" onerror="this.src='https://placehold.co/32x32/333/ccc?text=ICON'">
                 <span class="text-2xl font-bold text-white hidden">Shillette</span>
                 <span id="site-title-display" class="text-2xl font-bold text-white">Shillette</span>
             </div>
