--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="site-title-display">Shillette</title>
+    <title id="site-title-display">Shillette - Products</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,6 +26,19 @@
     <div id="loading-overlay">
         <div class="loader"><span class="loader-bar"></span><span class="loader-bar"></span><span class="loader-bar"></span></div>
     </div>
+
+    <div id="user-info-modal" class="modal">
+        <div class="modal-content">
+            <button id="modal-close-button" class="modal-close-button">
+                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+            </button>
+            <h3 class="text-lg font-semibold mb-3" id="modal-username">Username</h3>
+            <p class="text-sm text-gray-400 mb-1">User ID: <span id="modal-user-id">N/A</span></p>
+            <p class="text-sm font-medium mb-2">Roles:</p>
+            <div id="modal-user-roles"><p class="text-gray-500 text-xs">Roles not available.</p></div>
+        </div>
+    </div>
+
 
     <header class="py-4 sticky top-0 z-40 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
         <div class="container mx-auto px-6 flex justify-between items-center">
@@ -58,31 +71,19 @@
              </div>
     </header>
 
-    <main id="main-content" class="flex-grow">
-        <section class="relative text-center py-24 md:py-32 lg:py-40 overflow-hidden">
-            <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-white mb-4">Shillette</h1>
-                <p class="text-xl md:text-2xl text-orange-400 mb-6 font-medium">Advanced DMA Firmware</p>
-                <p class="max-w-2xl mx-auto text-gray-400 mb-10">
-                    Fully undetected DMA firmware, battle-tested for reliable performance. Join thousands of satisfied users.
-                </p>
-                <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 mb-16">
-                    <a href="/products.html" id="purchase-button" class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
-                        Purchase Product
-                    </a>
-                    <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto flex items-center justify-center space-x-2">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19.54 6.04a13.27 13.27 0 00-2.66-1.89 12.4 12.4 0 00-1.6-1.3c-.4-.3-.82-.53-1.28-.71-.18-.07-.37-.13-.56-.19a.82.82 0 00-.5-.06 11.85 11.85 0 00-5.88 0 .82.82 0 00-.5.06c-.19.06-.38.12-.56.19-.46.18-.88.4-1.28.7a12.34 12.34 0 00-1.6 1.3A13.23 13.23 0 004.46 6.04 14.31 14.31 0 003 11.7c0 .1 0 .19.02.28a13.8 13.8 0 001.44 4.61c.56 1.1 1.24 2.1 2.04 3 .5.56 1.04 1.07 1.63 1.53.17.13.34.25.52.37a.8.8 0 00.57.19.78.78 0 00.57-.19 11.07 11.07 0 005.56 0 .78.78 0 00.57.19.8.8 0 00.57-.19c.18-.12.35-.24.52-.37a12.06 12.06 0 003.67-4.53 13.85 13.85 0 001.44 4.61c0-.1 0-.19.02-.28a14.31 14.31 0 00-1.46-5.66zm-4.61 7.03a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0zm-5.72 0a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0z"></path></svg>
-                        <span>Join Discord</span>
-                    </a>
-                </div>
-                <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 max-w-3xl mx-auto text-gray-400">
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">1000+</div><div>Happy Users</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">1000+</div><div>Products Sold</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">5.0</div><div>Star Rating</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">3+</div><div>Years Experience</div></div>
-                </div>
+    <main class="flex-grow container mx-auto px-6 py-10">
+        <div id="products-page-content">
+            <div class="flex justify-start mb-8">
+                <a href="/" id="back-to-home-button-products" class="text-orange-400 hover:text-orange-300 flex items-center space-x-2 transition duration-200">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
+                    <span>Back to Home</span>
+                </a>
             </div>
-        </section>
+            <h2>Our Products</h2>
+            <div id="product-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-7xl mx-auto">
+                <p id="product-loading-status" class="text-center text-gray-400 md:col-span-2 lg:col-span-3">Loading products...</p>
+            </div>
+        </div>
     </main>
 
     <footer class="bg-black mt-auto py-6 border-t border-gray-800">
@@ -92,6 +93,6 @@
     </footer>
 
     <script src="/js/main.js"></script>
-    <script src="/js/home.js"></script>
+    <script src="/js/products.js"></script>
 </body>
 </html>
