--- a/pages/products.html
+++ b/pages/products.html
@@ -1,6 +1,6 @@
 <div id="products-page-content" class="flex-grow container mx-auto px-6 py-10 page-section">
     <div class="flex justify-start mb-8">
-         <a href="/#home" id="back-to-home-button-products" class="text-orange-400 hover:text-orange-300 flex items-center space-x-2 transition duration-200">
+         <a href="/home" id="back-to-home-button-products" class="text-orange-400 hover:text-orange-300 flex items-center space-x-2 transition duration-200">
              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
              <span>Back to Home</span>
          </a>
