--- a/index.html
+++ b/index.html
@@ -339,38 +339,29 @@
     <div id="dashboard-content" class="flex-grow container mx-auto px-6 py-10 page-section">
         <h2>Dashboard</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+
             <div class="dashboard-card md:col-span-1">
-                <h3 class="text-lg font-semibold text-white mb-4">Welcome!</h3>
+                <h3 class="text-lg font-semibold text-white mb-4">Profile</h3>
                 <div class="flex items-center space-x-4 mb-4">
                      <img id="dashboard-user-avatar" src="https://placehold.co/64x64/7f8c8d/ecf0f1?text=?" alt="User Avatar" class="w-16 h-16 rounded-full border-2 border-orange-500" onerror="this.src='https://placehold.co/64x64/7f8c8d/ecf0f1?text=?'">
                      <div>
                          <p id="dashboard-user-name" class="text-xl font-semibold text-white">Username</p>
-                         <p class="text-sm text-gray-400">Status: Active</p>
+                         <div id="dashboard-user-roles" class="mt-2 space-y-1 flex flex-wrap gap-1">
+                             <p class="text-gray-400 text-xs w-full">Loading roles...</p>
+                         </div>
                      </div>
                 </div>
-                <button id="dashboard-logout-button" class="w-full bg-red-600 hover:bg-red-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300">
+                <button id="dashboard-logout-button" class="w-full mt-4 bg-red-600 hover:bg-red-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300">
                     Logout
                 </button>
             </div>
 
-            <div class="dashboard-card md:col-span-2">
+            <div class="dashboard-card md:col-span-3"> {/* Changed col-span to 3 to make it full width below */}
                 <h3 class="text-lg font-semibold text-white mb-4">My Products</h3>
                 <p class="text-gray-400">Purchased product information will appear here (Feature not implemented).</p>
                 <button id="register-product-button" class="mt-4 bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300">
                     Register New Product
                 </button>
-            </div>
-
-            <div class="dashboard-card md:col-span-1">
-                <h3 class="text-lg font-semibold text-white mb-4">My Roles</h3>
-                <div id="dashboard-user-roles" class="space-y-2 flex flex-wrap gap-1">
-                    <p class="text-gray-400 text-sm w-full">Loading roles...</p>
-                    </div>
-            </div>
-
-            <div class="dashboard-card md:col-span-2">
-                 <h3 class="text-lg font-semibold text-white mb-4">Settings</h3>
-                 <p class="text-gray-400">User settings will appear here (Feature not implemented).</p>
             </div>
 
             <div id="admin-dashboard-sections" class="hidden md:col-span-3 grid grid-cols-1 lg:grid-cols-2 gap-6">
@@ -411,6 +402,10 @@
                     </div>
                     <p id="product-list-status">Loading products...</p>
                 </div>
+
+            </div>
+        </div>
+    </div>
 
             </div> </div> </div> <div id="tickets-page-content" class="flex-grow container mx-auto px-6 py-10 page-section">
          <div class="flex justify-start mb-8">
