--- a/index.html
+++ b/index.html
@@ -356,10 +356,12 @@
                 </button>
             </div>
 
-            <div class="dashboard-card md:col-span-1"> {/* Changed col-span from 3 to 1 */}
+            <<div class="dashboard-card md:col-span-1">
                 <h3 class="text-lg font-semibold text-white mb-4">My Products</h3>
-                <p class="text-gray-400">Purchased product information will appear here (Feature not implemented).</p>
-                <button id="register-product-button" class="mt-4 bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300">
+                <div id="dashboard-my-products-list" class="space-y-3">
+                    <p class="text-gray-400">Loading your registered products...</p>
+                </div>
+                <button id="register-product-button" class="mt-4 w-full bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300">
                     Register New Product
                 </button>
             </div>
@@ -763,6 +765,82 @@
         }
 
         /**
+         * Fetches all products from the API. Used for filtering registered products.
+         * @returns {Promise<Array|null>} A promise that resolves to the array of products or null on error.
+         */
+         async function fetchAllProducts() {
+            try {
+                const response = await fetch(`${API_BASE_URL}/api/products`);
+                if (!response.ok) throw new Error(`HTTP ${response.status}`);
+                const products = await response.json();
+                return products;
+            } catch (error) {
+                console.error("Error fetching all products:", error);
+                showPopupMessage(errorMessagePopup, `Error loading product list: ${error.message}`, true);
+                return null; // Return null indicates failure
+            }
+        }
+
+
+        /**
+         * Displays the user's registered products in the dashboard.
+         * @param {Array<string>} registeredProductIds - Array of product IDs registered to the user.
+         * @param {Array<object>} allProducts - The full list of all available products.
+         */
+         function displayRegisteredProducts(registeredProductIds, allProducts) {
+            const container = document.getElementById('dashboard-my-products-list');
+            if (!container) return;
+
+            container.innerHTML = ''; // Clear previous content (like loading message)
+
+            if (!registeredProductIds || registeredProductIds.length === 0) {
+                container.innerHTML = '<p class="text-gray-400 text-sm">You have not registered any products yet.</p>';
+                return;
+            }
+
+            if (!allProducts) {
+                 container.innerHTML = '<p class="text-red-400 text-sm">Could not load product details.</p>';
+                 return;
+            }
+
+            // Filter allProducts to find matches with registeredProductIds
+            const userProducts = allProducts.filter(product => registeredProductIds.includes(product._id));
+
+            if (userProducts.length === 0) {
+                 // This might happen if registered IDs don't match any current products
+                 container.innerHTML = '<p class="text-gray-400 text-sm">Could not find details for your registered products. Please contact support if this persists.</p>';
+                 return;
+            }
+
+            // Display each registered product found
+            userProducts.forEach(product => {
+                const productElement = document.createElement('div');
+                productElement.className = 'p-2 bg-slate-700/50 rounded-md text-sm flex items-center space-x-2'; // Simple styling
+
+                // Optional: Add thumbnail if available
+                let thumbnailHtml = '';
+                if (product.thumbnailUrl) {
+                   thumbnailHtml = `<img src="${product.thumbnailUrl}" alt="${product.name}" class="w-8 h-8 rounded object-cover flex-shrink-0" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                    <div class="w-8 h-8 rounded bg-slate-600 flex-shrink-0 items-center justify-center text-xs text-gray-400" style="display: none;">N/A</div>`; // Placeholder on error
+                } else {
+                    thumbnailHtml = '<div class="w-8 h-8 rounded bg-slate-600 flex-shrink-0 flex items-center justify-center text-xs text-gray-400">N/A</div>'; // Placeholder if no URL
+                }
+
+                productElement.innerHTML = `
+                    ${thumbnailHtml}
+                    <span class="text-white font-medium">${product.name || 'Unnamed Product'}</span>
+                    `;
+                 // Optional: Make the item clickable to go to the product detail page
+                 productElement.style.cursor = 'pointer';
+                 productElement.addEventListener('click', () => {
+                     window.location.hash = `/#productDetail?id=${product._id}`;
+                 });
+
+                container.appendChild(productElement);
+            });
+        }
+
+        /**
          * Hides all page sections and shows the one with the specified element ID.
          * @param {string} sectionElementId - The ID of the page section element to show.
          */
@@ -914,9 +992,20 @@
             } else if (baseHash === '#products') {
                  console.log(`[navigateTo] Fetching products for #products view.`);
                  fetchProducts();
-            } else if (baseHash === '#dashboard' && currentUser?.logged_in) {
+            // Inside navigateTo function...
+        } else if (baseHash === '#dashboard' && currentUser?.logged_in) {
                  console.log(`[navigateTo] Loading dashboard data. User:`, currentUser);
                  displayUserRoles(currentUser.roles); // Display roles
+
+                 // --- ADD THIS BLOCK ---
+                 // Fetch all products and then display the registered ones
+                 const myProductIds = currentUser.registered_products || [];
+                 fetchAllProducts().then(allProducts => {
+                     // Pass the IDs from the user object and the fetched full list
+                     displayRegisteredProducts(myProductIds, allProducts);
+                 });
+                 // --- END ADDED BLOCK ---
+
                  if (currentUser.is_moderator === true) {
                      console.log(`[navigateTo] User is moderator, loading admin data.`);
                      loadAdminDashboardData(); // Load admin sections if applicable
@@ -924,6 +1013,7 @@
                      console.log(`[navigateTo] User is NOT moderator, skipping admin data load.`);
                  }
             }
+            // ... rest of navigateTo function
 
             // Ensure header UI is up-to-date
             updateHeaderUI(currentUser);
