--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
 
     <div id="dashboard-content" class="flex-grow container mx-auto px-6 py-10 page-section">
         <h2>Dashboard</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6"> {/* Changed md:grid-cols-3 to md:grid-cols-2 */}
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-            <div class="dashboard-card md:col-span-1"> {/* Stays as col-span-1 */}
+            <div class="dashboard-card md:col-span-1">
                 <h3 class="text-lg font-semibold text-white mb-4">Profile</h3>
                 <div class="flex items-center space-x-4 mb-4">
                      <img id="dashboard-user-avatar" src="https://placehold.co/64x64/7f8c8d/ecf0f1?text=?" alt="User Avatar" class="w-16 h-16 rounded-full border-2 border-orange-500" onerror="this.src='https://placehold.co/64x64/7f8c8d/ecf0f1?text=?'">
@@ -366,7 +366,7 @@
                 </button>
             </div>
 
-            <div id="admin-dashboard-sections" class="hidden md:col-span-2 grid grid-cols-1 lg:grid-cols-2 gap-6"> {/* Changed outer container col-span to 2 */}
+            <div id="admin-dashboard-sections" class="hidden md:col-span-2 grid grid-cols-1 lg:grid-cols-2 gap-6">
 
                 <div class="admin-section lg:col-span-1">
                     <h3>Site Configuration</h3>
