--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 </button>
             </div>
 
-            <<div class="dashboard-card md:col-span-1">
+            <div class="dashboard-card md:col-span-1">
                 <h3 class="text-lg font-semibold text-white mb-4">My Products</h3>
                 <div id="dashboard-my-products-list" class="space-y-3">
                     <p class="text-gray-400">Loading your registered products...</p>
