--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </div>
             
             <div id="admin-product-context-menu" class="absolute bg-slate-700 border border-slate-600 rounded-md shadow-lg py-1 text-sm text-white z-50 hidden">
-                <button class="context-menu-item edit" id="context-edit-product">Edit Product</button> {/* Optional: Reuse edit functionality */}
+                <button class="context-menu-item edit" id="context-edit-product">Edit Product</button>
                 <button class="context-menu-item delete" id="context-delete-admin-product">Delete Product</button>
             </div>
         
@@ -754,7 +754,7 @@
         if (myProductGotoButton) {
             myProductGotoButton.addEventListener('click', () => {
                  if(contextMenuData.productId) {
-                    window.location.hash = `/#productDetail?id=${contextMenuData.productId}`;
+                    window.location.hash = `productDetail?id=${contextMenuData.productId}`;
                  }
                  hideContextMenu();
             });
@@ -890,7 +890,7 @@
                  productElement.addEventListener('click', (e) => {
                      // Prevent triggering if it was a right-click that might open a context menu
                      if (e.button !== 2) {
-                         window.location.hash = `/#productDetail?id=${product._id}`;
+                         window.location.hash = `productDetail?id=${product._id}`;
                      }
                  });
                  // --- ADD Context Menu Listener ---
